fix: add word-wrap to the tasks

--- a/src/ToDoList.scss
+++ b/src/ToDoList.scss
@@ -23,7 +23,7 @@
     max-width: 100%;
     width: 100%;
     max-height: 100px;
-    padding: 20px 20px;
+    padding: 25px 20px;
     margin: 0 0 20px 0;
     display: inline-block;
     text-align: center;
