--- a/src/components/Task.scss
+++ b/src/components/Task.scss
@@ -1,4 +1,6 @@
 .todo__task {
+  max-width: 100%;
+  width: 100%;
   padding: 5px 10px;
   display: flex;
   justify-content: space-between;
@@ -20,4 +22,10 @@
   &:hover {
     transform: scale(1.1);
   }
+}
+
+.todo__task-text{
+  margin: 0;
+  width: calc(100% - 40px);
+  word-wrap: break-word;
 }
